# ProjetoQueima

./: .gitignore  CriacaoBanco.py  Métodos.xlsx  Queima.db  README.md  index.html  index_antigo.html  reset.css
QueimaPetro/: .dockerignore  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  fix2.py  manage.py  pyproject.toml  requirements.txt  vercel.json
QueimaPetro/DadosQueima/: apps.py  models.py  tasks.py  views.py
QueimaPetro/DadosQueima/migrations/: 0001_initial.py  0002_materialqueimado_eficiencia_and_more.py  0003_resumoqueima.py  0004_rename_resumoqueima_queimadto.py  0005_delete_queimadto_materialqueimado_nome_gas.py  0006_alter_materialqueimado_data_queima.py  0007_materialqueimado_plataforma.py
QueimaPetro/QueimaPetro/: asgi.py  settings.py  urls.py  wsgi.py
QueimaPetro/Renan/Resumo Detalhado/: Resumo_Detalhado.html
QueimaPetro/database/: models.py
QueimaPetro/database/migrations/: 0001_initial.py  0002_rename_status_equipamento_status_operacional_and_more.py  0003_equipamento_codigo_equipamento_numero_patrimonio_and_more.py  0004_rename_responsavel_plataforma_operadorprincipal_and_more.py  0005_plataforma_equipemanutencao.py  0006_alter_equipamento_status_operacional.py  0007_remove_equipamento_modelo_remove_equipamento_tipo.py  0008_remove_equipamento_funcionario.py  (+11 more)
QueimaPetro/equipamentos/: forms.py  urls.py  views.py
QueimaPetro/inicio/: urls.py  views.py
QueimaPetro/operadores/: apps.py  forms.py  urls.py  views.py
QueimaPetro/plataforma/: forms.py  urls.py  views.py
QueimaPetro/templates/: Base copy.html  Base.html
(+104 files in other folders)
