[project]
name = "ProjetoQueima"
version = "0.1.0"
description = "Projeto Queima Petro"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "Django==5.1.6",
    "django-extensions==3.2.3",
    "matplotlib==3.10.8",
    "numpy==2.4.2",
    "packaging==26.0",
    "pillow==12.1.1",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "sqlparse==0.5.5",
    "tzdata==2025.3",
]

[tool.ruff]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
exclude = [
    "migrations/*",
    "venv/*",
    "*.generated.py",
]